<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort_top_rated"
        android:title="@string/action_sort_top_rated"
        android:orderInCategory="1"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_sort_most_popular"
        android:title="@string/action_sort_most_popular"
        android:orderInCategory="2"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_sort_upcoming"
        android:title="@string/action_sort_upcoming"
        android:orderInCategory="3"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_sort_favourites"
        android:title="@string/action_sort_favourites"
        android:orderInCategory="4"
        app:showAsAction="never"/>
</menu>