<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.MovieDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_app_bar_height"
        android:elevation="@dimen/size_large"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <smoovie.apps.com.kayatech.smoovie.util.SmoovieBackdropImageView
                android:id="@+id/backdrop_image_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="fitXY"
                app:layout_collapseMode="parallax" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_app_bar_height"
                android:background="@drawable/image_view_scrim" />


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_details"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <smoovie.apps.com.kayatech.smoovie.util.SmooviePosterImageView
                android:id="@+id/iv_poster_image_details"
                android:layout_width="@dimen/size_image_view_poster"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/size_default"
                android:layout_marginTop="@dimen/size_default"
                android:contentDescription="@string/label_content_description_poster"
                android:scaleType="fitXY"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/test" />


            <android.support.constraint.Group
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_default"
                android:layout_marginEnd="@dimen/size_smallest"
                app:constraint_referenced_ids="text_view_movie_title,rating_bar_movie_avg" />

            <TextView
                android:id="@+id/text_view_movie_title"
                android:layout_width="@dimen/size_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_default"
                android:text="@string/label_default"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="@id/rating_bar_movie_avg"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/movie_title_dummy_text" />

            <ImageView
                android:id="@+id/iv_favcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_default"
                android:contentDescription="@string/label_content_description_favicon"
                android:src="@drawable/favourites_selector"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <RatingBar
                android:id="@+id/rating_bar_movie_avg"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/size_default"
                android:isIndicator="true"
                android:stepSize="0.1"
                app:layout_constraintLeft_toRightOf="@id/iv_poster_image_details"
                app:layout_constraintTop_toBottomOf="@id/text_view_movie_title"
                tools:rating="2.5" />

            <TextView
                android:id="@+id/text_view_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/label_default"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="@id/rating_bar_movie_avg"
                app:layout_constraintTop_toBottomOf="@id/rating_bar_movie_avg"
                tools:text="@string/movie_release_date_dummy_text" />


            <TextView
                android:id="@+id/tv_label_overview"
                style="@style/DetailViewMarginStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/label_overview"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_poster_image_details" />

            <TextView
                android:id="@+id/text_view_overview"
                style="@style/DetailViewMarginStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/label_default"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/tv_label_overview"
                tools:text="@string/movie_overview_dummy_text" />


            <TextView
                android:id="@+id/tv_label_trailers"
                style="@style/DetailViewMarginStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_trailers"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_overview" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_medium"
                android:clipToPadding="false"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_trailers"
                tools:itemCount="1"
                tools:listitem="@layout/trailer_layout" />

            <TextView
                android:id="@+id/tv_no_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_medium"
                android:text="@string/error_trailer_unavailable"
                android:textAlignment="center"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_label_trailers" />

            <TextView
                android:id="@+id/tv_label_reviews"
                style="@style/DetailViewMarginStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_reviews"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recycler_view_trailers" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_reviews" />

            <TextView
                android:id="@+id/tv_no_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_medium"
                android:text="@string/error_review_unavailable"
                android:textAlignment="center"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_reviews"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>